chore: Mer effektiv logging av rest-svar fra infotrygd pleiepenger (#2785)